--- a/platformio.ini
+++ b/platformio.ini
@@ -27,6 +27,7 @@ lib_deps =
 	ottowinter/ESPAsyncWebServer-esphome@^3.2.2
 	bblanchon/ArduinoJson@^7.0.4
 	crankyoldgit/IRremoteESP8266@^2.8.6
+	espressif/esp32-camera@^2.0.4
 build_flags = 
 	-DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
