--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ platform = espressif32
 board = esp32dev
 monitor_speed = 115200
 framework = arduino
-upload_port = COM5
+upload_port = COM8
 lib_ldf_mode = deep
 lib_deps = 
 	freenove/Freenove VK16K33 Lib@^1.0.0
@@ -28,6 +28,7 @@ lib_deps =
 	bblanchon/ArduinoJson@^7.0.4
 	crankyoldgit/IRremoteESP8266@^2.8.6
 	espressif/esp32-camera@^2.0.4
+	ricmoo/QRCode@^0.0.1
 build_flags = 
 	-DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
