--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,9 +12,9 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "C:/Users/panige/Documents/FSDumb-PIO/.pio/build/esp-wrover-kit/firmware.elf",
+            "executable": "C:/Users/nicol/source/repos/Vroumed/FSDumb PIO/.pio/build/esp-wrover-kit/firmware.elf",
             "projectEnvName": "esp-wrover-kit",
-            "toolchainBinDir": "C:/Users/panige/.platformio/packages/toolchain-xtensa-esp32/bin",
+            "toolchainBinDir": "C:/Users/nicol/.platformio/packages/toolchain-xtensa-esp32/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
                 "type": "PlatformIO",
@@ -25,18 +25,18 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "C:/Users/panige/Documents/FSDumb-PIO/.pio/build/esp-wrover-kit/firmware.elf",
+            "executable": "C:/Users/nicol/source/repos/Vroumed/FSDumb PIO/.pio/build/esp-wrover-kit/firmware.elf",
             "projectEnvName": "esp-wrover-kit",
-            "toolchainBinDir": "C:/Users/panige/.platformio/packages/toolchain-xtensa-esp32/bin",
+            "toolchainBinDir": "C:/Users/nicol/.platformio/packages/toolchain-xtensa-esp32/bin",
             "internalConsoleOptions": "openOnSessionStart"
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "C:/Users/panige/Documents/FSDumb-PIO/.pio/build/esp-wrover-kit/firmware.elf",
+            "executable": "C:/Users/nicol/source/repos/Vroumed/FSDumb PIO/.pio/build/esp-wrover-kit/firmware.elf",
             "projectEnvName": "esp-wrover-kit",
-            "toolchainBinDir": "C:/Users/panige/.platformio/packages/toolchain-xtensa-esp32/bin",
+            "toolchainBinDir": "C:/Users/nicol/.platformio/packages/toolchain-xtensa-esp32/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "loadMode": "manual"
         }
